--- a/style.scss
+++ b/style.scss
@@ -1,6 +1,10 @@
+// 全局通用变量设置
+
 :root {
     --submit-green: #4caf50;
 }
+
+// 标准CSS起始文件配置
 
 * {
     margin: 0;
@@ -10,16 +14,19 @@
     box-sizing: border-box;
 }
 
-// 标准CSS起始文件配置
+// 主体开始
 
 html,
 body {
+    // 主体页面大小占满视窗
     width: 100vw;
     height: 100vh;
+    // 设置字体，系统字体异常
     font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
 }
 
 body {
+    // 建立flexbox，flow方向由上至下
     display: flex;
     flex-direction: column;
     // flexbox的全局居中
@@ -29,18 +36,23 @@ body {
 }
 
 section {
+    // 尺寸-视窗大小的一半
     width: 50%;
+    // 最小宽度与最大宽度，防止内容伸缩过度
     min-width: 300px;
     max-width: 600px;
+    // 框体视觉效果
     background-color: #f2f2f2;
     padding: 20px;
 }
 
+// input[]，此选择器可以选取具有特定属性/属性值的元素
 select,
 input[type="password"],
 input[type="text"] {
+    // 宽度
     width: 100%;
-    // 按照上右下左顺序分布
+    // padding/margin在使用简写时，边距数据按照上右下左顺序分布
     padding: 12px 20px;
     margin: 8px 0;
     // 此处display: inline-block是否必须要有？
@@ -49,12 +61,15 @@ input[type="text"] {
 }
 
 input[type="submit"] {
+    // 尺寸
     width: 100%;
+    // 框体视觉效果
     background-color: var(--submit-green);
     color: #f2f2f2;
     padding: 14px 20px;
     margin: 8px 0;
     border: none;
     border-radius: 5px;
-    cursor:pointer;
+    // 特效-点击
+    cursor: pointer;
 }
